--- a/data mining/data_mining intro .ipynb
+++ b/data mining/data_mining intro .ipynb
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -120,7 +120,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average Accuracy is 0.864\n"
+      "0.92\n",
+      "0.92\n",
+      "0.92\n",
+      "0.92\n",
+      "0.92\n",
+      "0.92\n",
+      "0.92\n",
+      "0.92\n",
+      "0.92\n",
+      "0.92\n",
+      "Average Accuracy is 0.920\n"
      ]
     }
    ],
@@ -134,12 +144,13 @@
     "\n",
     "E=[]\n",
     "no_iter=10\n",
-    "for i in range (0,no_iter):\n",
-    "   xtrain, xtest, ytrain, ytest = train_test_split(full_matrix.as_matrix(),t,random_state=0) \n",
+    "for i in range (0,no_iter): \n",
+    "   xtrain, xtest, ytrain, ytest = train_test_split(full_matrix.as_matrix(),t,random_state=20) \n",
     "   clf = NB()\n",
     "   y = clf.fit(xtrain, ytrain).predict(xtest)\n",
     "   acc=metrics.accuracy_score(ytest, y)\n",
     "   E.append(acc)\n",
+    "   print (acc)\n",
     "print (\"Average Accuracy is %3.3f\" % (sum(E)/no_iter) ) \n",
     "\n",
     "    "
@@ -147,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -156,11 +167,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " Accuracy of fold (1) is 0.930\n",
+      " Accuracy of fold (1) is 0.920\n",
       " Accuracy of fold (2) is 0.940\n",
-      " Accuracy of fold (3) is 0.950\n",
-      " Accuracy of fold (4) is 0.930\n",
-      " Accuracy of fold (5) is 0.870\n"
+      " Accuracy of fold (3) is 0.980\n",
+      " Accuracy of fold (4) is 0.840\n",
+      " Accuracy of fold (5) is 0.940\n",
+      " Accuracy of fold (6) is 0.940\n",
+      " Accuracy of fold (7) is 0.960\n",
+      " Accuracy of fold (8) is 0.880\n",
+      " Accuracy of fold (9) is 0.860\n",
+      " Accuracy of fold (10) is 0.880\n"
      ]
     }
    ],
@@ -171,7 +187,7 @@
     "import numpy as np\n",
     "from sklearn import metrics\n",
     "t=np.asarray(news.target[:500])   # true labels\n",
-    "kf = KFold(n_splits =5)\n",
+    "kf = KFold(n_splits =10)\n",
     "i=0\n",
     "for train, test in kf.split(tf_matrix): \n",
     "    xtrain,xtest = tf_matrix[train],  tf_matrix[test]\n",
@@ -314,13 +330,128 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Multi-Class Classification\n",
+    "- One-vs-All\n",
+    "- One-vs-One"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the data has 2381 rows and 29250 columns \n",
+      "One-vs-All --> number of mislabels out of 596 points in the test test: 94\n",
+      "One-vs-One --> number of mislabels out of 596 points in the test test: 106\n",
+      "Kmeans --> number of mislabels out of 1785 points in the test test: 1346\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Mutli-calss classification\n",
+    "\n",
+    "# import newsGroups data\n",
+    "import sys\n",
+    "import os\n",
+    "from sklearn.datasets import fetch_20newsgroups\n",
+    "news = fetch_20newsgroups(subset='train',\n",
+    "                          categories=('rec.autos',\n",
+    "                             'rec.sport.hockey',\n",
+    "                             'sci.med',\n",
+    "                             'sci.space'\n",
+    "                                     ),\n",
+    "                          remove=('headers', 'footers', 'quotes'))\n",
+    "\n",
+    "#generate term frequency matrix\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "tf_vec = CountVectorizer (max_df=500, \n",
+    "                      min_df=0,\n",
+    "                      max_features =30000, \n",
+    "                      ngram_range =(1,1),\n",
+    "                     stop_words='english')\n",
+    "\n",
+    "tf_matrix=tf_vec.fit_transform(news.data)  #sparse matrix\n",
+    "print (\"the data has %d rows and %d columns \" % (tf_matrix.shape[0], tf_matrix.shape[1]))\n",
+    "\n",
+    "import pandas as pd             #conver to full matrix\n",
+    "full_matrix = pd.DataFrame(tf_matrix.todense(),columns=tf_vec.get_feature_names())\n",
+    "\n",
+    "\n",
+    "#One-vs-All (one-vs-Rest)\n",
+    "import numpy as np\n",
+    "t=np.asarray(news.target)   # true labels\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "xtrain, xtest, ytrain, ytest = train_test_split(full_matrix.as_matrix(),t,random_state=50) \n",
+    "\n",
+    "from sklearn.naive_bayes import GaussianNB as NB\n",
+    "from sklearn.multiclass import OneVsRestClassifier\n",
+    "from sklearn.svm import LinearSVC\n",
+    "\n",
+    "clf= LinearSVC(random_state=10)\n",
+    "#clf = NB()\n",
+    "\n",
+    "y_pred = OneVsRestClassifier(clf).fit(xtrain, ytrain).predict(xtest)\n",
+    "error = (y_pred != ytest).sum()\n",
+    "print (\"One-vs-All --> number of mislabels out of %d points in the test test: %d\" % (xtest.shape[0],error ))\n",
+    "\n",
+    "\n",
+    "# One-vs-One (All-vs-All)\n",
+    "\n",
+    "from sklearn.multiclass import OneVsOneClassifier\n",
+    "clf= LinearSVC(random_state=10)\n",
+    "#clf = NB()\n",
+    "\n",
+    "y_pred = OneVsOneClassifier(clf).fit(xtrain, ytrain).predict(xtest)\n",
+    "error = (y_pred != ytest).sum()\n",
+    "print (\"One-vs-One --> number of mislabels out of %d points in the test test: %d\" % (xtest.shape[0],error ))\n",
+    "\n",
+    "from sklearn.cluster import KMeans\n",
+    "kmeans = KMeans(n_clusters=2, random_state=0).fit(xtrain)\n",
+    "error = (kmeans.labels_ != ytrain).sum()\n",
+    "print (\"Kmeans --> number of mislabels out of %d points in the test test: %d\" % (xtrain.shape[0],error ))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Unsupervised Learning (Clustering)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Kmeans --> number of mislabels out of 1785 points in the data: 1346\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "from sklearn.cluster import KMeans\n",
+    "kmeans = KMeans(n_clusters=2, random_state=0).fit(xtrain)\n",
+    "error = (kmeans.labels_ != ytrain).sum()\n",
+    "print (\"Kmeans --> number of mislabels out of %d points in the data: %d\" % (xtrain.shape[0],error ))\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
