--- a/data mining/data_mining intro .ipynb
+++ b/data mining/data_mining intro .ipynb
@@ -20,6 +20,7 @@
     "# import newsGroups data\n",
     "import sys\n",
     "import os\n",
+    "import numpy as np\n",
     "from sklearn.datasets import fetch_20newsgroups\n",
     "news = fetch_20newsgroups(subset='train',\n",
     "                          categories=('rec.autos',\n",
@@ -45,7 +46,6 @@
     "#classify data\n",
     "t=np.asarray(news.target[:500])   # true labels\n",
     "from sklearn.model_selection import train_test_split\n",
-    "import numpy as np\n",
     "xtrain, xtest, ytrain, ytest = train_test_split(full_matrix.as_matrix(),t,random_state=50) \n",
     "\n",
     "from sklearn.naive_bayes import GaussianNB as NB\n",
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -226,7 +226,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "With Bagging - number of mislabels out of 125 points: 9\n",
+      "With Bagging - number of mislabels out of 125 points: 11\n",
       "Witout Bagging - number of mislabels out of 125 points: 14\n",
       "With AdaBoost - number of mislabels out of 125 points: 14\n"
      ]
@@ -260,7 +260,7 @@
     "from sklearn.ensemble import AdaBoostClassifier\n",
     "clf = AdaBoostClassifier(NB(),\n",
     "                         algorithm=\"SAMME\",\n",
-    "                         n_estimators=200)\n",
+    "                         n_estimators=300)\n",
     "\n",
     "y_pred = clf.fit(xtrain, ytrain).predict(xtest)\n",
     "error = (y_pred != ytest).sum()\n",
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -279,9 +279,9 @@
      "output_type": "stream",
      "text": [
       "Witout Bagging - number of mislabels out of 125 points: 24\n",
-      "With Bagging - number of mislabels out of 125 points: 22\n",
-      "With Random Forest- number of mislabels out of 125 points: 13\n",
-      "With AdaBoost - number of mislabels out of 125 points: 17\n"
+      "With Bagging - number of mislabels out of 125 points: 20\n",
+      "With AdaBoost - number of mislabels out of 125 points: 18\n",
+      "With Random Forest- number of mislabels out of 125 points: 13\n"
      ]
     }
    ],
@@ -310,6 +310,18 @@
     "error = (y_pred != ytest).sum()\n",
     "print (\"With Bagging - number of mislabels out of %d points: %d\" % (xtest.shape[0],error ))\n",
     "\n",
+    "\n",
+    "# AdaBoost\n",
+    "from sklearn.ensemble import AdaBoostClassifier\n",
+    "clf = AdaBoostClassifier(tree.DecisionTreeClassifier(max_depth=2),\n",
+    "                         algorithm=\"SAMME\",\n",
+    "                         n_estimators=100)\n",
+    "\n",
+    "y_pred = clf.fit(xtrain, ytrain).predict(xtest)\n",
+    "error = (y_pred != ytest).sum()\n",
+    "print (\"With AdaBoost - number of mislabels out of %d points: %d\" % (xtest.shape[0],error ))\n",
+    "\n",
+    "\n",
     "#random Forest\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "clf = RandomForestClassifier(n_estimators=100, max_depth=None,random_state=10, max_features='auto')\n",
@@ -317,16 +329,7 @@
     "error = (y_pred != ytest).sum()\n",
     "print (\"With Random Forest- number of mislabels out of %d points: %d\" % (xtest.shape[0],error ))\n",
     "\n",
-    "\n",
-    "# AdaBoost\n",
-    "from sklearn.ensemble import AdaBoostClassifier\n",
-    "clf = AdaBoostClassifier(tree.DecisionTreeClassifier(max_depth=2),\n",
-    "                         algorithm=\"SAMME\",\n",
-    "                         n_estimators=200)\n",
-    "\n",
-    "y_pred = clf.fit(xtrain, ytrain).predict(xtest)\n",
-    "error = (y_pred != ytest).sum()\n",
-    "print (\"With AdaBoost - number of mislabels out of %d points: %d\" % (xtest.shape[0],error ))"
+    "\n"
    ]
   },
   {
@@ -342,22 +345,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "the data has 2381 rows and 29250 columns \n",
-      "One-vs-All --> number of mislabels out of 596 points in the test test: 94\n",
-      "One-vs-One --> number of mislabels out of 596 points in the test test: 106\n",
-      "Kmeans --> number of mislabels out of 1785 points in the test test: 1346\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Mutli-calss classification\n",
     "\n",
@@ -416,10 +408,7 @@
     "error = (y_pred != ytest).sum()\n",
     "print (\"One-vs-One --> number of mislabels out of %d points in the test test: %d\" % (xtest.shape[0],error ))\n",
     "\n",
-    "from sklearn.cluster import KMeans\n",
-    "kmeans = KMeans(n_clusters=2, random_state=0).fit(xtrain)\n",
-    "error = (kmeans.labels_ != ytrain).sum()\n",
-    "print (\"Kmeans --> number of mislabels out of %d points in the test test: %d\" % (xtrain.shape[0],error ))\n"
+    "\n"
    ]
   },
   {
@@ -431,19 +420,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Kmeans --> number of mislabels out of 1785 points in the data: 1346\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "from sklearn.cluster import KMeans\n",
